--- a/VampireSurvival-Like/Assembly-CSharp.csproj
+++ b/VampireSurvival-Like/Assembly-CSharp.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Sprites\Scripts\Character\PlayerMove.cs" />
+    <Compile Include="Assets\Sprites\Scripts\Character\Animate.cs" />
+    <Compile Include="Assets\Sprites\Scripts\Character\AnimateViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
