--- a/VampireSurvival-Like/Assembly-CSharp.csproj
+++ b/VampireSurvival-Like/Assembly-CSharp.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
     <Compile Include="Assets\Scripts\Level\Level.cs" />
     <Compile Include="Assets\Scripts\Character\AnimateViewModel.cs" />
+    <Compile Include="Assets\Scripts\Items\PickUp.cs" />
+    <Compile Include="Assets\Scripts\Items\IPickUpObject.cs" />
+    <Compile Include="Assets\Scripts\Items\SpawnObject.cs" />
+    <Compile Include="Assets\Scripts\Weapon\ThrowingAxeWeapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
