Пассивные пердметы. Можно использовать в дальнейшем как перки.

--- a/VampireSurvival-Like/Assembly-CSharp.csproj
+++ b/VampireSurvival-Like/Assembly-CSharp.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Assets\Scripts\Items\IPickUpObject.cs" />
     <Compile Include="Assets\Scripts\Level\Level.cs" />
     <Compile Include="Assets\Scripts\Character\AnimateViewModel.cs" />
+    <Compile Include="Assets\Scripts\Items\PassiveItem.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\SctiptableItems\Item.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
