--- a/VampireSurvival-Like/Assembly-CSharp.csproj
+++ b/VampireSurvival-Like/Assembly-CSharp.csproj
@@ -75,8 +75,11 @@
     <Compile Include="Assets\Scripts\Character\AnimateViewModel.cs" />
     <Compile Include="Assets\Scripts\Items\PassiveItem.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\SctiptableItems\Item.cs" />
-    <Compile Include="Assets\Scripts\UI\CharacterGameOver.cs" />
+    <Compile Include="Assets\Scripts\Menu\CharacterGameOver.cs" />
     <Compile Include="Assets\Scripts\Items\DropOnDestroy.cs" />
+    <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\Menu\Buttons\CloseButton.cs" />
+    <Compile Include="Assets\Scripts\Menu\PauseController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
