--- a/VampireSurvival-Like/Assembly-CSharp.csproj
+++ b/VampireSurvival-Like/Assembly-CSharp.csproj
@@ -57,34 +57,36 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Items\SpawnObject.cs" />
+    <Compile Include="Assets\Scripts\Items\PassiveItem.cs" />
+    <Compile Include="Assets\Scripts\Menu\CharacterGameOver.cs" />
     <Compile Include="Assets\Scripts\UI\HPBar.cs" />
+    <Compile Include="Assets\Scripts\Menu\Buttons\CloseButton.cs" />
     <Compile Include="Assets\Scripts\Character\Animate.cs" />
     <Compile Include="Assets\Scripts\Character\PlayerMove.cs" />
     <Compile Include="Assets\Scripts\Level\ExperienceProgress.cs" />
     <Compile Include="Assets\Scripts\Items\PickUp.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemiesController.cs" />
     <Compile Include="Assets\Scripts\Weapon\WhipWeapon.cs" />
+    <Compile Include="Assets\Scripts\Weapon\WeaponData.cs" />
     <Compile Include="Assets\Scripts\Character\Character.cs" />
     <Compile Include="Assets\Scripts\Weapon\DisableTimer.cs" />
+    <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\Weapon\WeaponStats.cs" />
+    <Compile Include="Assets\Scripts\Items\DropOnDestroy.cs" />
     <Compile Include="Assets\Scripts\Enemy\IDamageable.cs" />
     <Compile Include="Assets\Scripts\Weapon\ThrownAxeProjectile.cs" />
     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
     <Compile Include="Assets\Scripts\Weapon\ThrowingAxeWeapon.cs" />
     <Compile Include="Assets\Scripts\Items\IPickUpObject.cs" />
-    <Compile Include="Assets\Scripts\Level\Level.cs" />
-    <Compile Include="Assets\Scripts\Character\AnimateViewModel.cs" />
-    <Compile Include="Assets\Scripts\Items\PassiveItem.cs" />
     <Compile Include="Assets\Scripts\ScriptableObjects\SctiptableItems\Item.cs" />
-    <Compile Include="Assets\Scripts\Menu\CharacterGameOver.cs" />
-    <Compile Include="Assets\Scripts\Items\DropOnDestroy.cs" />
-    <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
-    <Compile Include="Assets\Scripts\Menu\Buttons\CloseButton.cs" />
-    <Compile Include="Assets\Scripts\Menu\PauseController.cs" />
-    <Compile Include="Assets\Scripts\Menu\UpgradePanelController.cs" />
-    <Compile Include="Assets\Scripts\Weapon\WeaponData.cs" />
-    <Compile Include="Assets\Scripts\Weapon\WeaponStats.cs" />
-    <Compile Include="Assets\Scripts\Weapon\WeaponController.cs" />
     <Compile Include="Assets\Scripts\Weapon\WeaponBase.cs" />
+    <Compile Include="Assets\Scripts\Weapon\WeaponController.cs" />
+    <Compile Include="Assets\Scripts\Level\Level.cs" />
+    <Compile Include="Assets\Scripts\Menu\UpgradePanelController.cs" />
+    <Compile Include="Assets\Scripts\Menu\PauseController.cs" />
+    <Compile Include="Assets\Scripts\Character\AnimateViewModel.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObjects\UpgradeData.cs" />
+    <Compile Include="Assets\Scripts\Menu\Buttons\UpgradeButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
